Table "roles" {
  "role" text [pk]
}

Table "languages" {
  "language" text [pk]  
}

Table "sections" {
  "section" text [pk]
}

Table "users" {
  "uuid" uuid [pk, default: `uuid_generate_v4()`]
  "email" text [unique, null]
  "hashed_password" text [unique, null]
  "google_id" text [unique, null]
  "google_name" text [null]
  "role" text [not null, default: 'user', ref: > roles.role]
  "language" text [not null, default: 'EN', ref: > languages.language]
  "theme" boolean [not null, default: 'light']
  "avatar_variant" text [not null]
  "avatar_colors" "varchar(6)[]" [not null]
  "layouts_recipes" json [not null]
  "layouts_lists" json [not null]
}

Table "recipes" {
  "uuid" uuid [pk, default: `uuid_generate_v4()`]
  "user_uuid" uuid [not null, ref: > users.uuid]
  "card_uuid" uuid [not null]
  "title" text [not null]
  "index" int [not null]
  "ingredient" text [not null]
  "quantity" numeric [null]
  "unit" text [null]
  "section" text [not null, ref: > sections.section]
  "kCal" numeric [null]
  "last_modified" timestamp [not null, default: `(now() at time zone 'utc')`]
}

Table "lists" {
  "uuid" uuid [pk, default: `uuid_generate_v4()`]
  "user_uuid" uuid [not null, ref: > users.uuid]
  "card_uuid" uuid [not null]
  "title" text [not null]
  "index" int [not null]
  "ingredient" text [not null]
  "quantity" numeric [null]
  "unit" text [null]
  "section" text [not null, ref: > sections.section]
  "checked" boolean [not null]
  "last_modified" timestamp [not null, default: `(now() at time zone 'utc')`]
}
